<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">電卓</string>
    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="num3">3</string>
    <string name="num4">4</string>
    <string name="num5">5</string>
    <string name="num6">6</string>
    <string name="num7">7</string>
    <string name="num8">8</string>
    <string name="num9">9</string>
    <string name="num0">0</string>
    <string name="tasu">+</string>
    <string name="hiku">-</string>
    <string name="kakeru">×</string>
    <string name="waru">÷</string>
    <string name="equal">=</string>
    <string name="all_clear">AC</string>
    <string name="delete">DEL</string>
    <string name="ten">.</string>
</resources>
